# saas

./: .gitignore  Cargo.toml
examples/anyhow-error-response/: Cargo.toml  README.md
examples/anyhow-error-response/doc/: 流程图.drawio
examples/anyhow-error-response/src/: main.rs
examples/async01_base/: Cargo.toml
examples/async01_base/src/: main.rs
examples/async02_simple/: Cargo.toml
examples/async02_simple/src/: main.rs
examples/async03_timer/: Cargo.toml
examples/async03_timer/src/: lib.rs  main.rs
examples/async04_pin/: Cargo.toml
examples/async04_pin/src/: main.rs
examples/async05_mutil/: Cargo.toml
examples/async05_mutil/src/: main.rs
examples/async06_web/: Cargo.toml  sleep.html
examples/async06_web/src/: main.rs
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/consume-body-in-extractor-or-middleware/: Cargo.toml  README.md
examples/consume-body-in-extractor-or-middleware/src/: main.rs
examples/consume-body-in-extractor-or-middleware/test/: test.rest
examples/domain/: Cargo.toml
examples/domain/src/: lib.rs  main.rs  record.rs
examples/domain/src/cloudflare/: mod.rs  zone.rs
examples/example01_format/: Cargo.toml
examples/example01_format/src/: main.rs
examples/example02_type/: Cargo.toml
examples/example02_type/src/: main.rs
examples/example03_linktable/: Cargo.toml
examples/example03_linktable/src/: main.rs
examples/example04_convert/: Cargo.toml
examples/example04_convert/src/: main.rs
examples/example08_for/: Cargo.toml
examples/example08_for/src/: main.rs
examples/example09_func/: Cargo.toml
examples/example09_func/src/: main.rs
examples/example14_generic/: Cargo.toml
examples/example14_generic/src/: main.rs
examples/example14_generic2/: Cargo.toml
examples/example14_generic2/src/: main.rs
examples/example15_ownership/: Cargo.toml
examples/example15_ownership/src/: main.rs
examples/example16_drop/: Cargo.toml
examples/example16_drop/src/: main.rs
examples/example16_iterator/: Cargo.toml
examples/example16_iterator/src/: main.rs
examples/example16_parenttrait/: Cargo.toml
examples/example16_parenttrait/src/: main.rs
examples/example16_trait/: Cargo.toml
examples/example16_trait/src/: main.rs
examples/example17_macro/: Cargo.toml
examples/example17_macro/src/: main.rs
examples/example17_macro_dry/: Cargo.toml
examples/example17_macro_dry/src/: main.rs
examples/example_CTFE/: Cargo.toml
examples/example_CTFE/src/: main.rs
examples/example_etcd-rs/: Cargo.toml
examples/example_etcd-rs/src/: main.rs
examples/exmaple14_virtual/: Cargo.toml
examples/exmaple14_virtual/src/: main.rs
saas/: Cargo.toml
saas-core/: Cargo.toml  build.rs
saas-core/src/: body.rs  error.rs  lib.rs  macros.rs
saas-core/src/ext_traits/: mod.rs  request.rs  request_parts.rs
saas-core/src/extract/: default_body_limit.rs  from_ref.rs  mod.rs  rejection.rs  request_parts.rs  tuple.rs
saas-core/src/response/: append_headers.rs  into_response.rs  into_response_parts.rs  mod.rs
saas-extra/: Cargo.toml
saas-macros/: Cargo.toml
saas/src/: boxed.rs  extension.rs  form.rs  hyper1_tokio_io.rs  json.rs  lib.rs  macros.rs  serve.rs  service_ext.rs  util.rs
saas/src/body/: mod.rs
saas/src/error_handling/: mod.rs
saas/src/extract/: connect_info.rs  host.rs  matched_path.rs  mod.rs  query.rs  raw_form.rs  raw_query.rs  rejection.rs  request_parts.rs  state.rs  ws.rs
saas/src/extract/path/: de.rs  mod.rs
saas/src/handler/: future.rs  mod.rs  service.rs
saas/src/middleware/: from_extractor.rs  from_fn.rs  map_request.rs  map_response.rs  mod.rs
saas/src/response/: mod.rs  redirect.rs  sse.rs
saas/src/routing/: future.rs  into_make_service.rs  method_filter.rs  method_routing.rs  mod.rs  not_found.rs  path_router.rs  route.rs  strip_prefix.rs  url_params.rs
saas/src/test_helpers/: mod.rs
