[package]
name = "saas-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = ["dep:tracing"]
__private_docs = ["dep:tower-http"]

[dependencies]
http = "0.2.9"
http-body = "0.4.5"
bytes = "1.4.0"
futures-util = "0.3.28"
sync_wrapper = "0.1.2"
pin-project-lite = "0.2.10"
mime = "0.3.17"
tower-layer = "0.3.2"
tower-service = "0.3.2"
async-trait = "0.1.72"
tokio = {version = "1.29.1", features = ["rt", "macros"]}

# 可选的依赖库
tower-http = { version = "0.4.1", optional = true, features = ["limit"]}
tracing = { version="0.1.37", default-features=false, optional = true}

[build-dependencies]
rustversion = "1.0.9"

[package.metadata.cargo-public-api-crates]
allowed = [
    "futures_core",
    "http",
    "bytes",
    "http_body",
    "tower_layer",
]