[package]
name = "saas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log"]
form = ["dep:serde_urlencoded"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
json = ["dep:serde_json", "dep:serde_path_to_error"]
matched-path = []
multipart = ["dep:multer"]
original-uri = []
query = ["dep:serde_urlencoded"]
tokio = ["dep:tokio", "hyper/server", "hyper/tcp", "hyper/runtime", "tower/make"]
tower-log = ["tower/log"]
tracing = ["dep:tracing", "saas-core/tracing"]
ws = ["tokio", "dep:tokio-tungstenite", "dep:sha1", "dep:base64"]

__private_docs = ["tower/full", "dep:tower-http"]

[dependencies]
async-trait = "0.1.72"
saas-core = { path = "../saas-core", version = "0.1.0"}
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"]}

http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["stream"] }
itoa = "1.0.9"
matchit = "0.7"
memchr = "2.5"
mime = "0.3.17"

percent-encoding = "2.3.0"
pin-project-lite = "0.2.10"
serde = "1.0"
sync_wrapper = "0.1"

tower = { version = "0.4.13", default-features = false, features = ["util"]}
tower-layer = "0.3.2"
tower-service = "0.3.2"

hyper1 = { package = "hyper", version = "=1.0.0-rc.4", features = ["server", "http1"], git = "https://github.com/hyperium/hyper.git"}
tower-hyper-http-body-compat = {version = "0.2", features= ["server", "http1"]}
# 可选的包
base64 = { version = "0.21.2", optional = true}
multer = { version = "2.1.0", optional = true}
serde_json = {version = "1.0", features = ["raw_value"], optional = true}
serde_path_to_error = {version = "0.1.14", optional = true}
serde_urlencoded = {version = "0.7.1", optional = true }
sha1 = { version = "0.10", optional = true}
tokio = { package = "tokio", version = "1.29", features = ["time"], optional = true}
tokio-tungstenite = {version = "0.20.0", optional = true}
tracing = { version = "0.1", default-features = false, optional = true}


[dependencies.tower-http]
version = "0.4"
optional = true
features = [
    # all tower-http features except (de)?compression-zstd which doesn't
    # build on `--target armv5te-unknown-linux-musleabi`
    "add-extension",
    "auth",
    "catch-panic",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "cors",
    "decompression-br",
    "decompression-deflate",
    "decompression-gzip",
    "follow-redirect",
    "fs",
    "limit",
    "map-request-body",
    "map-response-body",
    "metrics",
    "normalize-path",
    "propagate-header",
    "redirect",
    "request-id",
    "sensitive-headers",
    "set-header",
    "set-status",
    "timeout",
    "trace",
    "util",
    "validate-request",
]

[build-dependencies]
rustversion = "1.0.9"

[dev-dependencies]
anyhow = "1.0"
# saas-macros = { path = "../saas-macros", version = "0.1", features = ["__private"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"] }
rustversion = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { package = "tokio", version = "1.29", features = ["macros", "rt", "rt-multi-thread", "net", "test-util"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
# base64 = { version = "0.21.2"}
# sha1 = { version = "0.10"}
# tokio-tungstenite = {version = "0.20.0"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies.tower]
package = "tower"
version = "0.4.10"
features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
    "steer",
    "filter",
]

[dev-dependencies.tower-http]
version = "0.4"
features = [
    # all tower-http features except (de)?compression-zstd which doesn't
    # build on `--target armv5te-unknown-linux-musleabi`
    "add-extension",
    "auth",
    "catch-panic",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "cors",
    "decompression-br",
    "decompression-deflate",
    "decompression-gzip",
    "follow-redirect",
    "fs",
    "limit",
    "map-request-body",
    "map-response-body",
    "metrics",
    "normalize-path",
    "propagate-header",
    "redirect",
    "request-id",
    "sensitive-headers",
    "set-header",
    "set-status",
    "timeout",
    "trace",
    "util",
    "validate-request",
]

[package.metadata.playground]
features = [
    "http1",
    "http2",
    "json",
    "multipart",
    "ws",
]

[package.metadata.cargo-public-api-crates]
allowed = [
    "async_trait",
    "saas_core",
    "saas_macros",
    "bytes",
    "futures_core",
    "futures_sink",
    "futures_util",
    "http",
    "http_body",
    "serde",
    "tokio",
    "tower_layer",
    "tower_service",
]